--- a/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/ITHeadBRApproveSlave.cshtml
@@ -142,8 +142,19 @@
                                                         }
                                                     </td>
 
+                                                    <td style="padding: 5px; text-align: right;">
+                                                        @if (Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.QS).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
+                                                        {
+                                                            @Html.TextBoxFor(model => model.DetailDataList[i].UnitRate, new { id = "unitRate_" + i, @class = "form -control quantityValue unitRate" })
 
-                                                    <td class="unitRate" style="padding: 5px; text-align: right;">@String.Format("{0:0.00}", item.UnitRate)</td>
+                                                        }
+                                                        else
+                                                        {
+                                                            @String.Format("{0:0.00}", item.UnitRate)
+                                                        }
+                                                    </td>
+
+                                                    @*<td class="unitRate" style="padding: 5px; text-align: right;">@String.Format("{0:0.00}", item.UnitRate)</td>*@
                                                     <td class="lineTotal" style="padding: 5px;  text-align: right;">@String.Format("{0:0.00}", item.TotalPrice)</td>
 
 
@@ -170,14 +181,9 @@
                                         <tr class="bg-gray">
                                             @foreach (var item in Model.ApprovalModelList)
                                             {
-                                                if (item.SignatoryId == (int)EnumBRequisitionSignatory.QS)
-                                                {
-                                                    <th style="padding:5px;text-align:center;">Head of IT</th>
-                                                }
-                                                else
-                                                {
-                                                    <th style="padding:5px;text-align:center;">@item.SignatoryName</th>
-                                                }
+                                                <th style="padding:5px;text-align:center;">
+                                                    @((item.SignatoryName == "QS") ? "QS/ Head/ IT / Engineer" : item.SignatoryName)
+                                                </th>
                                             }
                                         </tr>
                                         <tr>
@@ -250,10 +256,13 @@
                     @if (Model.BillRequisitionMasterId > 0 && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.QS).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                     {
                         <div class="box-footer">
-
                             <div class="row">
-                                <div class="col-md-6"></div>
-                                <div class="col-md-6">
+                                <div class="col-md-3"></div>
+                                <div class="col-md-3"></div>
+                                <div class="col-md-3">
+                                    <button type="submit" id="btnSave" class="btn btn-danger btn-block">Reject</button>
+                                </div>
+                                <div class="col-md-3">
                                     <button type="submit" id="btnSave" class="btn btn-primary btn-block">Approve</button>
                                 </div>
                             </div>
