--- a/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
@@ -263,7 +263,9 @@
                                 <div class="col-md-3"></div>
                                 <div class="col-md-3"></div>
                                 <div class="col-md-3">
-                                    <button type="submit" id="btnSave" class="btn btn-danger btn-block">Reject</button>
+                                    <a href="~/BillRequisition/PDReject?billRequisitionMasterId=@Model.BillRequisitionMasterId" class="btn btn-danger btn-block">
+                                        Reject
+                                    </a>
                                 </div>
                                 <div class="col-md-3">
                                     <button type="submit" id="btnSave" class="btn btn-primary btn-block">Approve</button>
